--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Usage Example for fraunerd-pokedex.json</title>
+    <title>Usage Example for pokedex.json</title>
 
 
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
@@ -37,7 +37,7 @@
 
 <body>
     <div class="container">
-        <h1 class="text-center">Usage Example for fraunerd-pokedex.json</h1>
+        <h1 class="text-center">Usage Example for pokedex.json</h1>
         <div class="row">
             <div class="col-xs- col-xs-offset-2">
                 <p id="pkmn">Pkmn go here :-)</p>
@@ -48,7 +48,7 @@
         <script>
             var data = [];
             $(document).ready(function() {
-                $.getJSON('fraunerd-pokedex.json', function(pokedata) {
+                $.getJSON('pokedex.json', function(pokedata) {
 
                     for (i = 0; i < pokedata.length; i++) {
                         data.push([JSON.stringify(pokedata[i].nummer).replace(/"/g, ""), JSON.stringify(pokedata[i].de).replace(/"/g, ""),
